Bug 128792 - CreateUnoDialog fails
Summary: CreateUnoDialog fails
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha0+
Hardware: All All
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords: bibisected, bisected, regression
: 128789 129253 129268 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-11-14 06:40 UTC by Mike Kaganski
Modified: 2019-12-09 14:44 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2019-11-14 06:40:53 UTC
Download and install extension from [1]; in a spreadsheet, select some data and try to run the extension (using the toolbar button, or Data->Remove Duplicates, or directly running Sub RemoveDuplicates from My Macros & Dialogs->RemoveDuplicates->RemoveDuplicates).

With current master, both on Windows and Linux, after https://git.libreoffice.org/core/+/fe2c63e494ea66042406ad71234ebe076dec07dc it fails with error "BASIC runtime error. Object variable not set." message on line

> oDialog1.GetControl("OptionHint").Text = getText(5)

because oDialog1 is null at this point, despite it was set in line

> oDialog1 = CreateUnoDialog( DialogLibraries.RemoveDuplicates.Options )

[1] https://extensions.libreoffice.org/extensions/remove-duplicates-fast
Comment 1 Caolán McNamara 2019-11-14 09:44:56 UTC
*** Bug 128789 has been marked as a duplicate of this bug. ***
Comment 2 Commit Notification 2019-11-14 11:07:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9a083905cf9e72bf22fc727677d052b8d1a0652b

Resolves: tdf#128792 progressbar control not created

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2019-11-14 19:30:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/839fb5486ed517bc4f08a408279588ca777432eb

Resolves: tdf#128792 progressbar control not created

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Roman Kuznetsov 2019-11-16 06:45:47 UTC
extension works fine in

Version: 6.5.0.0.alpha0+
Build ID: d04eef858250f97690f32dba17f42d157a8767fc
CPU threads: 4; OS: Mac OS X 10.15.1; UI render: GL; VCL: osx; 
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded

thanks, Caolán
Comment 5 Xisco Faulí 2019-12-09 10:37:55 UTC
*** Bug 129268 has been marked as a duplicate of this bug. ***
Comment 6 Caolán McNamara 2019-12-09 14:44:56 UTC
*** Bug 129253 has been marked as a duplicate of this bug. ***