Resolves: tdf#128792 progressbar control not created

Change-Id: I81ff4e56d5ea2a4f5b7c034c2a99df881969b119
Reviewed-on: https://gerrit.libreoffice.org/82655
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>